# korean-domain-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE-GUARDRAILS  README.md  pyproject.toml
data/court_map/: court_map.json
data/expected/: contract_001.md  criminal_001.md  dismissal_001.md  rehab_001.md
data/samples/: contract_001.json  criminal_001.json  dismissal_001.json  general_001.json  rehab_001.json
docs/: ARCHITECTURE.md
scripts/: run.sh
skills/korean-domain-agent/: SKILL.md
src/: __init__.py  cli.py  config.py
src/agent/: __init__.py  orchestrator.py  safety.py  tool_router.py
src/prompts/: base.md  contract_review.md  criminal_opinion.md  general.md  rehab_creditor.md  unfair_dismissal.md
src/render/: __init__.py  docx_render.py
src/tools/: __init__.py  citation_guard.py  ktx.py  law_lookup.py  mocks.py  precedent_search.py  schema.py
tests/: test_regression.py  test_safety.py  test_smoke.py  test_tools.py
