[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-domain-agent"
version = "0.2.0"
description = "Korean domain-specific LLM agent kit — 6 modes, citation guard, PII masking, prompt cache"
authors = [{ name = "kimlawtech", email = "kimlawtech@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT AND PolyForm-Noncommercial-1.0.0" }

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
korean-domain-agent = "src.cli:main"
legal-agent = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
